@@ -21,7 +21,7 @@ lazy val javacRelease17 = Seq("--release", "17")
 
 lazy val scala213 = "2.13.17"
 
-lazy val deltaVersion = "4.1.0"
+lazy val deltaVersion = sys.props.getOrElse("deltaVersion", "4.1.0")
 lazy val sparkVersion = sys.props.getOrElse("sparkVersion", "4.0.0")
 lazy val sparkMajorMinorVersion = sparkVersion.split("\\.").take(2).mkString(".")
 lazy val hadoopVersion = "3.4.2"
@@ -112,10 +112,6 @@ lazy val commonSettings = Seq(
   assembly / test := {}
 )
 
-enablePlugins(CoursierPlugin)
-
-useCoursier := true
-
 // Configure resolvers
 resolvers ++= Seq(
   "Maven Central" at "https://repo1.maven.org/maven2/",
@@ -171,14 +167,13 @@ lazy val controlApi = (project in file("target/control/java"))
   )
 
 lazy val client = (project in file("clients/java"))
-  .enablePlugins(OpenApiGeneratorPlugin)
   .settings(
     name := s"$artifactNamePrefix-client",
     commonSettings,
     javaOnlyReleaseSettings,
     Compile / compile / javacOptions ++= javacRelease11,
     javaCheckstyleTestOnlySettings("dev/checkstyle-config.xml"),
-    // Include generated OpenAPI sources
+    // Include generated OpenAPI sources (from both all.yaml and delta.yaml, same output dir)
     Compile / unmanagedSourceDirectories += (file(".") / "clients" / "java" / "target" / "src" / "main" / "java"),
     libraryDependencies ++= Seq(
       "com.fasterxml.jackson.core" % "jackson-annotations" % jacksonVersion,
@@ -198,35 +193,43 @@ lazy val client = (project in file("clients/java"))
       "org.assertj" % "assertj-core" % "3.26.3" % Test,
     ),
     (Compile / compile) := ((Compile / compile) dependsOn generate).value,
-    
-    // Add custom test sources from clients/java directory
+    (Compile / doc) := ((Compile / doc) dependsOn generate).value,
+
+    // Add custom test sources and shared test resources from clients/java directory
     Test / unmanagedSourceDirectories += (file(".") / "clients" / "java" / "src" / "test" / "java"),
+    Test / unmanagedResourceDirectories += (file(".") / "server" / "src" / "test" / "resources"),
 
-    // OpenAPI generation specs
-    openApiInputSpec := (file(".") / "api" / "all.yaml").toString,
-    openApiGeneratorName := "java",
-    openApiOutputDir := (file(".") / "clients" / "java" / "target").toString,
-    openApiApiPackage := s"$orgName.client.api",
-    openApiModelPackage := s"$orgName.client.model",
-    openApiAdditionalProperties := Map(
-      "library" -> "native",
-      "useJakartaEe" -> "true",
-      "hideGenerationTimestamp" -> "true",
-      "openApiNullable" -> "false",
-      "enumUnknownDefaultCase" -> "true"),
-    openApiGenerateApiTests := SettingDisabled,
-    openApiGenerateModelTests := SettingDisabled,
-    openApiGenerateApiDocumentation := SettingDisabled,
-    openApiGenerateModelDocumentation := SettingDisabled,
-    // Define the simple generate command to generate full client codes
+    // Generate from both all.yaml and delta.yaml into the same output directory
     generate := {
-      val _ = openApiGenerate.value
-
-      // Delete the generated build.sbt file so that it is not used for our sbt config
-      val buildSbtFile = file(openApiOutputDir.value) / "build.sbt"
-      if (buildSbtFile.exists()) {
-        buildSbtFile.delete()
-      }
+      val outputDir = (file(".") / "clients" / "java" / "target").toString
+      val commonProps = Map(
+        "library" -> "native",
+        "useJakartaEe" -> "true",
+        "hideGenerationTimestamp" -> "true",
+        "openApiNullable" -> "false",
+        "enumUnknownDefaultCase" -> "true",
+        "useOneOfDiscriminatorLookup" -> "true")
+      OpenApiHelper.generate(
+        outputDir = outputDir,
+        specs = Seq(
+          OpenApiSpec(
+            inputSpec = (file(".") / "api" / "all.yaml").toString,
+            invokerPackage = s"$orgName.client",
+            apiPackage = s"$orgName.client.api",
+            modelPackage = s"$orgName.client.model",
+            additionalProperties = commonProps
+          ),
+          OpenApiSpec(
+            inputSpec = (file(".") / "api" / "delta.yaml").toString,
+            invokerPackage = s"$orgName.client",
+            apiPackage = s"$orgName.client.delta.api",
+            modelPackage = s"$orgName.client.delta.model",
+            additionalProperties = commonProps
+          )
+        )
+      )
+      val buildSbtFile = file(outputDir) / "build.sbt"
+      if (buildSbtFile.exists()) buildSbtFile.delete()
     },
     // Add VersionInfo in the same way like in server
     Compile / sourceGenerators += Def.task {
@@ -245,37 +248,48 @@ lazy val client = (project in file("clients/java"))
 lazy val prepareGeneration = taskKey[Unit]("Prepare the environment for OpenAPI code generation")
 
 lazy val pythonClient = (project in file("clients/python"))
-  .enablePlugins(OpenApiGeneratorPlugin)
   .disablePlugins(CheckstylePlugin)
   .settings(
     name := s"$artifactNamePrefix-python-client",
     commonSettings,
     skipReleaseSettings,
     Compile / compile := (Compile / compile).dependsOn(generate).value,
-    openApiInputSpec := (baseDirectory.value.getParentFile.getParentFile / "api" / "all.yaml").getAbsolutePath,
-    openApiGeneratorName := "python",
-    openApiOutputDir := (baseDirectory.value / "target").getAbsolutePath,
-    openApiPackageName := s"$artifactNamePrefix.client",
-    openApiAdditionalProperties := Map(
-      "packageVersion" -> s"${version.value.replace("-SNAPSHOT", ".dev0")}",
-      "library"        -> "asyncio"
-    ),
-    openApiGenerateApiTests := SettingDisabled,
-    openApiGenerateModelTests := SettingDisabled,
-    openApiGenerateApiDocumentation := SettingDisabled,
-    openApiGenerateModelDocumentation := SettingDisabled,
 
-    prepareGeneration := PythonClientPostBuild.prepareGeneration(streams.value.log, baseDirectory.value, openApiOutputDir.value),
+    prepareGeneration := PythonClientPostBuild.prepareGeneration(
+      streams.value.log, baseDirectory.value,
+      (baseDirectory.value / "target").getAbsolutePath),
 
     generate := Def.sequential(
       prepareGeneration,
-      openApiGenerate,
+      Def.task {
+        val outputDir = (baseDirectory.value / "target").getAbsolutePath
+        val commonProps = Map(
+          "packageVersion" -> s"${version.value.replace("-SNAPSHOT", ".dev0")}",
+          "library"        -> "asyncio"
+        )
+        OpenApiHelper.generate(
+          outputDir = outputDir,
+          generatorName = "python",
+          specs = Seq(
+            OpenApiSpec(
+              inputSpec = (baseDirectory.value.getParentFile.getParentFile / "api" / "all.yaml").getAbsolutePath,
+              packageName = s"$artifactNamePrefix.client",
+              additionalProperties = commonProps
+            ),
+            OpenApiSpec(
+              inputSpec = (baseDirectory.value.getParentFile.getParentFile / "api" / "delta.yaml").getAbsolutePath,
+              packageName = s"$artifactNamePrefix.delta",
+              additionalProperties = commonProps,
+              globalProperties = Map("apis" -> "", "models" -> "")
+            )
+          )
+        )
+      },
       Def.task {
         val log = streams.value.log
-
         PythonClientPostBuild.processGeneratedFiles(
           log,
-          openApiOutputDir.value,
+          (baseDirectory.value / "target").getAbsolutePath,
           baseDirectory.value,
         )
         log.info("OpenAPI Python client generation completed.")
@@ -284,18 +298,29 @@ lazy val pythonClient = (project in file("clients/python"))
   )
 
 lazy val apiDocs = (project in file("api"))
-  .enablePlugins(OpenApiGeneratorPlugin)
   .disablePlugins(CheckstylePlugin)
   .settings(
     name := s"$artifactNamePrefix-docs",
     skipReleaseSettings,
-    // OpenAPI generation specs
-    openApiInputSpec := (file("api") / "all.yaml").toString,
-    openApiGeneratorName := "markdown",
-    openApiOutputDir := (file("api")).toString,
-    // Define the simple generate command to generate markdown docs
     generate := {
-      val _ = openApiGenerate.value
+      OpenApiHelper.generate(
+        outputDir = (file("api")).toString,
+        generatorName = "markdown",
+        specs = Seq(
+          OpenApiSpec(
+            inputSpec = (file("api") / "all.yaml").toString
+          )
+        )
+      )
+      OpenApiHelper.generate(
+        outputDir = (file("api") / "delta-docs").toString,
+        generatorName = "markdown",
+        specs = Seq(
+          OpenApiSpec(
+            inputSpec = (file("api") / "delta.yaml").toString
+          )
+        )
+      )
     }
   )
 
@@ -415,14 +440,13 @@ lazy val server = (project in file("server"))
     },
     Test / javaOptions += s"-Duser.dir=${(ThisBuild / baseDirectory).value.getAbsolutePath}",
     // Include server and control models in the bin package for server
-    // This will allow us to have a single maven artifact and not 3 (server, server models, control models)
+    // This will allow us to have a single maven artifact and not multiple (server, server models, control models)
     Compile / packageBin / mappings ++= (Compile / packageBin / mappings).value ++
       (serverModels / Compile / packageBin / mappings).value ++
       (controlModels / Compile / packageBin / mappings).value
   )
 
 lazy val serverModels = (project in file("server") / "target" / "models")
-  .enablePlugins(OpenApiGeneratorPlugin)
   .disablePlugins(JavaFormatterPlugin, CheckstylePlugin)
   .settings(
     name := s"$artifactNamePrefix-servermodels",
@@ -434,26 +458,34 @@ lazy val serverModels = (project in file("server") / "target" / "models")
       "jakarta.annotation" % "jakarta.annotation-api" % "3.0.0" % Provided,
       "com.fasterxml.jackson.core" % "jackson-annotations" % jacksonVersion,
     ),
-    // OpenAPI generation configs for generating model codes from the spec
-    openApiInputSpec := (file(".") / "api" / "all.yaml").toString,
-    openApiGeneratorName := "java",
-    openApiOutputDir := (file("server") / "target" / "models").toString,
-    openApiValidateSpec := SettingEnabled,
-    openApiGenerateMetadata := SettingDisabled,
-    openApiModelPackage := s"$orgName.server.model",
-    openApiAdditionalProperties := Map(
-      "library" -> "resteasy", // resteasy generates the most minimal models
-      "useJakartaEe" -> "true",
-      "hideGenerationTimestamp" -> "true"
-    ),
-    openApiGlobalProperties := Map("models" -> ""),
-    openApiGenerateApiTests := SettingDisabled,
-    openApiGenerateModelTests := SettingDisabled,
-    openApiGenerateApiDocumentation := SettingDisabled,
-    openApiGenerateModelDocumentation := SettingDisabled,
-    // Define the simple generate command to generate model codes
+    // Generate model codes from both all.yaml and delta.yaml into the same output directory.
+    // Both use "resteasy" for minimal server-side models (no client SDK dependencies).
+    // Polymorphic types (TableUpdate, TableRequirement, DataType) use the
+    // discriminator + allOf pattern for proper Jackson deserialization.
     generate := {
-      val _ = openApiGenerate.value
+      val outputDir = (file("server") / "target" / "models").toString
+      val commonProps = Map(
+        "library" -> "resteasy",
+        "useJakartaEe" -> "true",
+        "hideGenerationTimestamp" -> "true"
+      )
+      OpenApiHelper.generate(
+        outputDir = outputDir,
+        specs = Seq(
+          OpenApiSpec(
+            inputSpec = (file(".") / "api" / "all.yaml").toString,
+            modelPackage = s"$orgName.server.model",
+            additionalProperties = commonProps,
+            globalProperties = Map("models" -> "")
+          ),
+          OpenApiSpec(
+            inputSpec = (file(".") / "api" / "delta.yaml").toString,
+            modelPackage = s"$orgName.server.delta.model",
+            additionalProperties = commonProps,
+            globalProperties = Map("models" -> ""),
+          )
+        )
+      )
     }
   )
 
@@ -498,6 +530,7 @@ lazy val cli = (project in file("examples") / "cli")
   .dependsOn(serverModels)
   .dependsOn(client % "compile->compile;test->test")
   .dependsOn(controlApi % "compile->compile")
+  .dependsOn(hadoop)
   .enablePlugins(CheckstylePlugin)
   .settings(
     name := s"$artifactNamePrefix-cli",
@@ -517,6 +550,7 @@ lazy val cli = (project in file("examples") / "cli")
       "io.delta" % "delta-kernel-api" % deltaVersion,
       "io.delta" % "delta-kernel-defaults" % deltaVersion,
       "io.delta" % "delta-storage" % deltaVersion,
+      "io.delta" % "delta-kernel-unitycatalog" % deltaVersion,
       "org.apache.hadoop" % "hadoop-client-api" % hadoopVersion,
       "org.apache.hadoop" % "hadoop-client-runtime" % hadoopVersion,
       "de.vandermeer" % "asciitable" % "0.3.2",
@@ -564,7 +598,7 @@ lazy val serverShaded = (project in file("server-shaded"))
   )
 
 lazy val spark = (project in file("connectors/spark"))
-  .dependsOn(client)
+  .dependsOn(client, hadoop)
   .enablePlugins(CheckstylePlugin)
   .settings(
     name := s"$artifactNamePrefix-spark",
@@ -574,6 +608,7 @@ lazy val spark = (project in file("connectors/spark"))
     scalaReleaseSettings,
     javaOptions ++= Seq(
       "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+      "--add-opens=java.base/sun.util.calendar=ALL-UNNAMED",
     ),
     javafmtCheckSettings(),
     javaCheckstyleSettings("dev/checkstyle-config.xml"),
@@ -654,6 +689,37 @@ lazy val spark = (project in file("connectors/spark"))
     }
   )
 
+lazy val hadoop = (project in file("connectors/hadoop"))
+  .dependsOn(client)
+  .enablePlugins(CheckstylePlugin)
+  .settings(
+    name := s"$artifactNamePrefix-hadoop",
+    commonSettings,
+    javaOnlyReleaseSettings,
+    javafmtCheckSettings(),
+    javaCheckstyleSettings("dev/checkstyle-config.xml"),
+    Compile / compile / javacOptions ++= javacRelease11,
+    libraryDependencies ++= Seq(
+      "org.apache.hadoop" % "hadoop-client-api" % hadoopVersion % Provided,
+      "com.google.cloud.bigdataoss" % "util-hadoop" % "3.0.2" % Provided,
+      "org.apache.hadoop" % "hadoop-azure" % hadoopVersion % Provided,
+      "software.amazon.awssdk" % "auth" % "2.25.37" % Provided,
+    ),
+    libraryDependencies ++= Seq(
+      // Test dependencies
+      "org.junit.jupiter" % "junit-jupiter" % "5.10.3" % Test,
+      "org.assertj" % "assertj-core" % "3.26.3" % Test,
+      "org.mockito" % "mockito-core" % "5.11.0" % Test,
+      "org.mockito" % "mockito-inline" % "5.2.0" % Test,
+      "org.mockito" % "mockito-junit-jupiter" % "5.12.0" % Test,
+      "net.aichler" % "jupiter-interface" % JupiterKeys.jupiterVersion.value % Test,
+      "org.apache.hadoop" % "hadoop-client-runtime" % hadoopVersion % Test,
+      "org.apache.hadoop" % "hadoop-aws" % hadoopVersion % Test,
+      "com.google.cloud.bigdataoss" % "gcs-connector" % "3.0.2" % Test classifier "shaded",
+    ),
+    Test / unmanagedJars += (serverShaded / assembly).value,
+  )
+
 lazy val integrationTests = (project in file("integration-tests"))
   .enablePlugins(CheckstylePlugin)
   .dependsOn(spark)
@@ -692,7 +758,7 @@ lazy val integrationTests = (project in file("integration-tests"))
   )
 
 lazy val root = (project in file("."))
-  .aggregate(serverModels, client, pythonClient, server, cli, spark, controlApi, controlModels, apiDocs)
+  .aggregate(serverModels, client, pythonClient, server, cli, spark, hadoop, controlApi, controlModels, apiDocs)
   .settings(
     name := s"$artifactNamePrefix",
     createTarballSettings(),
